# mini-printf

./: CMakeLists.txt  mini-printf.c  mini-printf.h
include/: mini-printf.h
src/: mini-printf.c
